--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       :root {
+        --purple: hsl(259, 100%, 65%);
+        --light-red: hsl(0, 100%, 67%);
+
+        --white: hsl(0, 0%, 100%);
+        --off-white: hsl(0, 0%, 94%);
+        --light-grey: hsl(0, 0%, 86%);
+        --smokey-grey: hsl(0, 1%, 44%);
+        --off-black: hsl(0, 0%, 8%);
+
         font-family: "Poppins", sans-serif;
         font-weight: 700;
 
-        background-color: #f0f0f0;
+        background-color: var(--off-white);
       }
 
       body {
@@ -43,11 +52,12 @@
       }
 
       .container {
+        width: 100%;
         max-width: 600px;
         margin: auto;
         padding: 40px;
 
-        background-color: white;
+        background-color: var(--white);
         border-radius: 20px;
         border-bottom-right-radius: 160px;
       }
@@ -60,7 +70,7 @@
 
         padding-bottom: 40px;
         margin-bottom: 40px;
-        border-bottom: 1px solid #dedede;
+        border-bottom: 1px solid var(--light-grey);
       }
       form div {
         display: flex;
@@ -68,34 +78,34 @@
       }
 
       form label {
-        color: #686868;
+        color: var(--smokey-grey);
         font-size: 11px;
-        letter-spacing: 1px;
+        letter-spacing: 2px;
         text-transform: uppercase;
 
         margin-bottom: 4px;
       }
       form label.error {
-        color: red;
+        color: var(--light-red);
       }
 
       form input {
         max-width: 100px;
-        padding: 12px;
+        padding: 16px;
 
-        font-size: 22px;
+        font-size: 32px;
         font-weight: 700;
         letter-spacing: 2px;
 
-        border: 1px solid #dedede;
-        border-radius: 4px;
+        border: 1px solid var(--light-grey);
+        border-radius: 8px;
       }
       form input.error {
-        border: 1px solid red;
+        border: 1px solid var(--light-red);
       }
       form input:focus {
         outline: none;
-        border: 1px solid #864cff;
+        border: 1px solid var(--purple);
       }
 
       form span {
@@ -106,7 +116,7 @@
         margin-top: 4px;
       }
       form span.error {
-        color: red;
+        color: var(--light-red);
       }
 
       form button {
@@ -119,7 +129,7 @@
         bottom: 0;
         transform: translateY(50%);
 
-        background-color: #864cff;
+        background-color: var(--purple);
         border: none;
         border-radius: 100px;
 
@@ -128,11 +138,11 @@
       form button:hover,
       form button:focus {
         outline: none;
-        background-color: black;
+        background-color: var(--off-black);
       }
 
       .result {
-        font-size: 80px;
+        font-size: 72px;
         font-weight: 800;
         font-style: italic;
         line-height: 1.1;
@@ -141,7 +151,7 @@
         margin: 0;
       }
       .result p span {
-        color: #864cff;
+        color: var(--purple);
       }
 
       .attribution {
