--- a/index.html
+++ b/index.html
@@ -83,17 +83,20 @@
         letter-spacing: 2px;
         text-transform: uppercase;
 
-        margin-bottom: 4px;
+        margin-bottom: 8px;
       }
       form label.error {
         color: var(--light-red);
       }
 
       form input {
-        max-width: 100px;
-        padding: 16px;
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
 
-        font-size: 32px;
+        max-width: 100px;
+        padding: 16px 20px;
+
+        font-size: 24px;
         font-weight: 700;
         letter-spacing: 2px;
 
@@ -109,7 +112,7 @@
       }
 
       form span {
-        font-size: 11px;
+        font-size: 12px;
         font-weight: 400;
         font-style: italic;
 
@@ -142,7 +145,7 @@
       }
 
       .result {
-        font-size: 72px;
+        font-size: 88px;
         font-weight: 800;
         font-style: italic;
         line-height: 1.1;
