--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
         border: 1px solid var(--light-red);
       }
       form input:focus {
-        outline: none;
-        border: 1px solid var(--purple);
+        outline-color: var(--purple);
       }
 
       form span {
