--- a/index.html
+++ b/index.html
@@ -163,6 +163,59 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
+
+      @media (max-width: 768px) {
+        .page {
+          width: calc(100vw - 20px);
+          min-height: calc(100vh - 20px - 20px);
+          display: grid;
+          place-items: center;
+          padding: 10px;
+        }
+
+        .container {
+          max-width: 312px;
+          padding: 40px 20px;
+
+          border-bottom-right-radius: 120px;
+        }
+
+        form {
+          gap: 12px;
+          padding-bottom: 60px;
+          margin-bottom: 60px;
+        }
+
+        form input {
+          max-width: 60px;
+          padding: 12px 16px;
+
+          font-size: 18px;
+          letter-spacing: 2px;
+        }
+
+        form button {
+          width: 70px;
+          height: 70px;
+          padding: 0;
+
+          right: 50%;
+          transform: translate(50%, 50%);
+
+          background-color: var(--purple);
+          border: none;
+          border-radius: 100px;
+
+          cursor: pointer;
+        }
+        form button img {
+          width: 50%;
+        }
+
+        .result {
+          font-size: 54px;
+        }
+      }
     </style>
   </head>
   <body>
